fix(samples) fix samples button toolbar, when group header is visible (e.g. Imagine)

--- a/src/app/trip/sample/samples.table.scss
+++ b/src/app/trip/sample/samples.table.scss
@@ -1,4 +1,3 @@
-
 .table-container {
   --table-toolbar-height: 0px;
   height: calc(100% - var(--table-container-offset, 0px) - var(--table-toolbar-height, 0px));
@@ -25,7 +24,6 @@
   .mat-mdc-table {
     .mat-mdc-header-row,
     .mat-mdc-row {
-
       .mat-column-id {
         width: 50px;
       }
@@ -33,7 +31,7 @@
       .mat-column-TAG_ID,
       .mat-column-DRESSING {
         min-width: 80px !important;
-        max-width: 120px !important;;
+        max-width: 120px !important;
       }
 
       .mat-column-taxonName,
@@ -90,7 +88,6 @@
       .mat-column-81 {
         max-width: 100px;
       }
-
     }
 
     /* First header row (group) */
@@ -102,7 +99,7 @@
       &.cdk-visually-hidden {
         visibility: hidden;
         display: none;
-        height: 0!important;
+        height: 0 !important;
       }
 
       .mat-mdc-header-cell {
@@ -110,7 +107,8 @@
         //background-color: transparent;
 
         &.mat-column-top-start {
-          padding-inline-start: 8px !important;
+          padding-inline-start: 16px !important;
+          min-width: 116px;
           color: unset;
         }
       }
@@ -145,21 +143,15 @@
         visibility: hidden;
       }
 
-      &:hover  .visible-hover {
+      &:hover .visible-hover {
         visibility: unset;
       }
     }
-
-
   }
 
-
   &.has-pmfm-header-details {
-
     /* Second header row : increase row height */
     .mat-mdc-header-row.second-header-row {
-
-
       height: 90px;
       max-height: 90px;
 
@@ -170,9 +162,8 @@
         max-height: 100%;
         background-color: var(--mat-cell-background-color);
 
-
         mat-label,
-        ion-label  {
+        ion-label {
           max-height: 100%;
           max-width: 100%;
         }
@@ -180,7 +171,6 @@
         &.even {
           --mat-cell-background-color: var(--ion-color-light);
         }
-
       }
 
       mat-label,
@@ -196,7 +186,5 @@
       min-width: unset !important;
       max-width: unset !important;
     }
-
   }
-
 }
